add external portfolios

--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 														<div class="gfort-block-body gfort-block-section-title-body">
 
 															<!-- Block content tiny -->
-															<div class="gfort-block-section-title-heading-tiny font-size-13 font-weight-500 secondary-font-family heading-color">
+															<div class="gfort-block-section-title-heading-tiny font-size-13 font-weight-500 secondary-font-family accent-color">
 																<p>About Us</p>
 															</div><!-- /End Block content tiny -->
 
@@ -1417,6 +1417,72 @@
 									</div><!-- /End container -->
 								</div><!-- /End Section -->
 
+								<!-- Section -->
+								<div class="gfort-section grey-1-bg-color" style="padding:36px 0 18px">
+									<!-- container -->
+									<div class="container">
+										<!-- row -->
+										<div class="row">
+
+
+											<!-- col-lg-12 -->
+											<div class="col-lg-8 offset-lg-2">
+
+
+												<!-- Section title -->
+												<div class="gfort-block gfort-block-section-title gfort-text-center">
+													<!-- Block container -->
+													<div class="gfort-block-container">
+
+														<!-- Block content tiny -->
+														<div class="gfort-block-section-title-heading-tiny font-size-13 font-weight-500 secondary-font-family accent-color">
+															<p>See More</p>
+														</div><!-- /End Block content tiny -->
+
+														<!-- Block heading -->
+														<div class="gfort-block-heading gfort-block-section-title-heading">
+															<h2>Full Albums of Recent Builds</h2>
+														</div><!-- /End Block heading -->
+
+														<!-- Divider -->
+														<div class="gfort-hr-divider gfort-hr-divider-layout-10 accent-color">
+															<div class="gfort-hr-divider-line-1"></div>
+															<div class="gfort-hr-divider-line-2"></div>
+														</div>
+
+														<!-- Block body -->
+														<div class="row">
+															<div class="col-lg-4">
+																<!-- Block content tiny -->
+																<div class="gfort-block-section-title-heading-tiny font-size-13 font-weight-600 secondary-font-family heading-color">
+																	<a class="gfort-btn gfort-btn-outline-reverse gfort-btn-primary" style="display:block;margin-bottom:5px;" href="https://photos.app.goo.gl/G7UVrywEb6mJbLE36" target="_blank">Bell Rd<br/>Iowa Park, TX</a>
+																</div><!-- /End Block content tiny -->
+															</div>
+															<div class="col-lg-4">
+																<!-- Block content tiny -->
+																<div class="gfort-block-section-title-heading-tiny font-size-13 font-weight-600 secondary-font-family heading-color">
+																	<a class="gfort-btn gfort-btn-outline-reverse gfort-btn-primary" style="display:block;margin-bottom:5px;" href="https://photos.app.goo.gl/QV1ccaJqyQJnqGxq6" target="_blank">Delgadillo Custom<br/>Iowa Park, TX</a>
+																</div><!-- /End Block content tiny -->
+															</div>
+															<div class="col-lg-4">
+																<!-- Block content tiny -->
+																<div class="gfort-block-section-title-heading-tiny font-size-13 font-weight-600 secondary-font-family heading-color">
+																	<a class="gfort-btn gfort-btn-outline-reverse gfort-btn-primary" style="display:block;margin-bottom:5px;" href="https://photos.app.goo.gl/A4vzCzKJ995JcgyX6" target="_blank">Stone Lake<br/>Wichita Falls, TX</a>
+																</div><!-- /End Block content tiny -->
+															</div>
+														</div><!--/End Block body -->
+
+													</div><!-- /End Block container -->
+												</div><!-- /End Section title -->
+
+
+											</div><!-- /End col-lg-12 -->
+
+
+										</div><!-- /End row -->
+									</div><!-- /End container -->
+								</div><!-- /End Section -->
+
 
 								<!-- Section -->
 								<div class="gfort-section gfort-section-3x-padding" id="section-6">
@@ -1458,9 +1524,6 @@
 															<div class="gfort-block-content gfort-block-section-title-content">
 																<p>I understand staying within your budget is the key to building a home in which you can truly be comfortable living. And just like every home isn't one-size-fits-all, neither is our pricing. Every home is unique based upon its parameters and its future residents and our flexible payment options are just as unique.</p>
 															</div><!-- /End Block content -->
-															<div class="gfort-block-footer gfort-block-pricing-footer">
-																<a href="#" class="gfort-btn gfort-btn-outline-reverse gfort-btn-primary">HIRE US</a>
-															</div>
 														</div><!--/End Block body -->
 
 													</div><!-- /End Block container -->
