--- a/test.html
+++ b/test.html
@@ -4,5 +4,8 @@
 </head>
 <body>
 	<button data-brushfire="0dc8fe86-f9fe-491d-af85-36050a23226c" class="brushfire-button register dark"></button>
+
+	<hr>
+	<button data-brushfire="7675dc79-20af-476e-9c08-deccf7b7b9a2" class="brushfire-button register blue"></button>
 </body>
 </html>
