--- a/test.html
+++ b/test.html
@@ -7,5 +7,7 @@
 
 	<hr>
 	<button data-brushfire="7675dc79-20af-476e-9c08-deccf7b7b9a2" class="brushfire-button register blue"></button>
+
+	<iframe id="brushfire-widget" allowtransparency="true" allow="payment" src="https://widgetsource.futurebrushfire.com/legacyentertainmentgroup/legacydinnertheater/598881"></iframe>
 </body>
 </html>
